# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
day-1-first/: Cargo.toml
day-1-first/src/: main.rs
day-1-second/: Cargo.toml
day-1-second/src/: main.rs
day-10-first/: Cargo.toml
day-10-first/src/: main.rs
day-10-second/: Cargo.toml
day-10-second/src/: main.rs
day-11-first/: Cargo.toml
day-11-first/src/: main.rs
day-11-second/: Cargo.toml
day-11-second/src/: main.rs
day-12-first/: Cargo.toml
day-12-first/src/: main.rs
day-12-second/: Cargo.toml
day-12-second/src/: main.rs
day-13-first/: Cargo.toml
day-13-first/src/: main.rs
day-13-second/: Cargo.toml
day-13-second/src/: main.rs
day-14-first/: Cargo.toml
day-14-first/src/: main.rs
day-14-second/: Cargo.toml
day-14-second/src/: main.rs
day-15-first/: Cargo.toml
day-15-first/src/: main.rs
day-15-second/: Cargo.toml
day-16-first/: Cargo.toml
day-16-second/: Cargo.toml
day-17-first/: Cargo.toml
day-17-second/: Cargo.toml
day-18-first/: Cargo.toml
day-18-second/: Cargo.toml
day-2-first/: Cargo.toml
day-2-first/src/: main.rs
day-2-second/: Cargo.toml
day-3-first/: Cargo.toml
day-3-second/: Cargo.toml
day-4-first/: Cargo.toml
day-4-second/: Cargo.toml
day-5-first/: Cargo.toml
day-5-second/: Cargo.toml
day-6-first/: Cargo.toml
day-6-second/: Cargo.toml
day-7-first/: Cargo.toml
day-7-second/: Cargo.toml
day-8-first/: Cargo.toml
day-8-second/: Cargo.toml
day-9-first/: Cargo.toml
day-9-second/: Cargo.toml
test-inputs/: 14.txt
(+22 files in other folders)
