[workspace]
resolver = "2"

members = [
    
     "day-1-first", "day-1-second", "day-2-first", "day-2-second", "day-3-first", "day-3-second", "day-4-first", "day-4-second", "day-5-first", "day-5-second", "day-6-first", "day-6-second", "day-7-first", "day-7-second",
     
]

[workspace.dependencies]
project-root = "0.2.2"
